--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@capacitor/keyboard": "1.1.0",
     "@capacitor/status-bar": "1.0.3",
     "@capacitor/storage": "^1.2.0",
+    "@capacitor/toast": "^1.0.3",
     "@ionic-native/calendar": "^5.36.0",
     "@ionic-native/toast": "^5.36.0",
     "@ionic/angular": "^5.5.2",
@@ -37,7 +38,10 @@
     "cordova-plugin-calendar": "^5.1.5",
     "cordova-plugin-x-toast": "^2.7.2",
     "firebase": "^9.1.2",
+    "ion2-calendar": "^3.0.0-rc.0",
+    "ionic2-calendar": "^0.6.9",
     "modal": "^1.2.0",
+    "moment": "^2.29.1",
     "rxfire": "^6.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
